--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "des-utilities",
-  "version": "1.0.2",
-  "description": "Reusuable components for web development",
+  "version": "1.0.4",
+  "description": "Reusable components for web development",
   "main": "dist/index.js",
   "scripts": {
     "build": "webpack"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/designsynchrony/des-utilities.git"
   },
   "keywords": [
     "utility",
@@ -26,5 +30,9 @@
     "style-loader": "^1.0.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.9.2"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/designsynchrony/des-utilities/issues"
+  },
+  "homepage": "https://github.com/designsynchrony/des-utilities"
 }
