--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "des-utilities",
-  "version": "1.0.4",
+  "name": "des-utilities-v2",
+  "version": "2.0.0",
   "description": "Reusable components for web development",
-  "main": "dist/index.js",
+  "main": "dist/esm/index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -14,6 +14,11 @@
     "utility",
     "utilities",
     "components"
+  ],
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md"
   ],
   "author": "Design Synchrony",
   "license": "MIT",
@@ -28,6 +33,7 @@
     "babel-loader": "^8.2.5",
     "css-loader": "^3.3.0",
     "style-loader": "^1.0.1",
+    "tslib": "^2.4.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.9.2"
   },
